--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
     "def term_output(term, x):\n",
     "    return term[0]*(x**term[1])\n",
     "\n",
-    "def derivative_at(find_derivative, x):\n",
+    "def derivative_at(derivative_terms, x):\n",
     "    ans = list(map(lambda term: term_output(term, x), find_derivative))\n",
     "    return ans\n"
    ]
